--- a/main.html
+++ b/main.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <script type="text/javascript" src="./script.js">
-		function handleS() {
-			
-		}
-</script>
-	  <form >
-	  <input id="name" name="name" type="text"></input>
-		  <input id="year" name="year" type="number"></input>
-		  <button type="submit" onclick="handleS" >submit</button>
-		  </form>
+    <script type="text/javascript" src="./script.js"></script>
+	<form >
+		<input id="name" name="name" type="text"></input>
+		<input id="year" name="year" type="number"></input>
+		<button type="button" onclick="handleS()" >submit</button>
+	</form>
 	  <h3 id="url">https://localhost:8080/</h3>
   </body>
 
